# cddlc-codegen

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: backend.rs  emit.rs  lib.rs
tests/: integration.rs
